# dnd-world

./: .gitignore
backend/: pyproject.toml
backend/dndworld/: asgi.py  settings.py  urls.py
backend/locations/: admin.py
backend/locations/migrations/: 0001_initial.py  0002_alter_location_options_alter_location_uuid_and_more.py  0003_location_image.py
backend/locations/models/: __init__.py  location.py
backend/people/: admin.py
backend/people/migrations/: 0001_initial.py  0002_alter_locationrole_options_alter_person_options_and_more.py  0003_person_image.py  0004_alter_person_options_and_more.py
backend/people/models/: __init__.py  location_role.py  person.py
backend/quests/: admin.py  models.py
backend/quests/migrations/: 0001_initial.py  0002_alter_quest_status_questcharacter_quest_characters_and_more.py
backend/quests/models/: quest.py  quest_character.py
backend/shared/: models.py
dndworld/: manage.py
dndworld/dndworld/: settings.py  wsgi.py
