[project]
name = "dnd-world"
version = "0.0.1"
description = "Track DnD Locations and NPCs"
authors = [
    {name = "JayWelborn",email = "jesse.welborn@gmail.com"}
]
license = {text = "GPL v3"}
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.1,<7.0.0)"
]
package_mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
